--- a/main.css
+++ b/main.css
@@ -1,1 +1,34 @@
+html {
+  font-size: 20px;
+}
 
+nav {
+  background-color: orange;
+  width: 100%;
+  padding:0.75rem;
+  max-width: 100%;
+  min-height: 50px;
+}
+#nav-logo {
+
+}
+main {
+  width: 100%;
+  padding:1rem;
+  background-color: green;
+  margin:1rem;
+  color:white;
+  height: 1rem;
+}
+.left-side {
+  background-color: red;
+  width:300px;
+  height: 600px;
+}
+.main-container {
+  margin: 1rem;
+  width:990px;
+  height:auto;
+  margin: 0px auto;
+  border: 2px gray solid;
+}
